Other fixes for small mobile screen spacing

--- a/Profile/client/styles/Imports/HtmlElements.import.styl
+++ b/Profile/client/styles/Imports/HtmlElements.import.styl
@@ -13,6 +13,14 @@ h2
   padding-bottom 10px
   text-decoration underline
 
+@media (max-width: 375px)
+  h2.inverse.section-header
+    max-width: 280px
+    // Center text manually
+    display block
+    margin-left auto
+    margin-right auto
+
 center-content(width_per)
   width width_per
   height auto
